# titon-trader

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: commit.md  pr.md  test.md
config/: __init__.py  risk_limits.yaml  settings.py  strategies.yaml  tickers.yaml
config/grafana/: grafana.ini
config/grafana/provisioning/dashboards/: dashboards.yaml  titan.json
config/grafana/provisioning/datasources/: datasources.yaml
config/ibc/: config.ini  jts.ini
config/prometheus/: prometheus.yml
data/historical/: AAPL_daily.parquet  AMD_daily.parquet  AMZN_daily.parquet  AVGO_daily.parquet  CRM_daily.parquet  GOOGL_daily.parquet  IWM_daily.parquet  META_daily.parquet  MSFT_daily.parquet  NVDA_daily.parquet  QQQ_daily.parquet  SPY_daily.parquet  TSLA_daily.parquet  XLK_daily.parquet  earnings_calendar.parquet  fred_bamlh0a0hym2.parquet  fred_dff.parquet  fred_dgs10.parquet  fred_dgs2.parquet  fred_dtwexbgs.parquet  fred_t10y2y.parquet  vix_daily.parquet
docs/: MasterBluePrint.md  Research-1.md  Research-2.md  SetupChecklist.md  audit-log.md
models/: ensemble_calibrator.pkl  ensemble_cat.cbm  ensemble_lgb.pkl  ensemble_xgb.json  ensemble_xgb_metadata.json  feature_names.json  model_metadata.json
reports/: PHASE_0_AUDIT.md  PHASE_1_DATA.md  PHASE_2_FEATURES.md  PHASE_3_TRAINING.md  PHASE_4_CALIBRATION.md  PHASE_5_SMOKETEST.md
scripts/: build_features.py  calibrate_ensemble.py  health_check.py  init_db.sql  seed_historical.py  setup_db.py  train_bootstrap.py  train_models.py
src/: main.py
src/ai/: agents.py  analysis_agent.py  execution_agent.py  journal_agent.py  memory.py  prompts.py  risk_agent.py
src/broker/: account.py  contracts.py  gateway.py  market_data.py  orders.py
src/data/: __init__.py  cache.py  finnhub.py  fred.py  polygon.py  questdb.py  quiver.py  sec_edgar.py  unusual_whales.py
src/ml/: backtest.py  calibration.py  features.py  online.py  optimizer.py  rl_agent.py  trainer.py
src/notifications/: reporter.py  telegram.py  twilio_sms.py
src/risk/: __init__.py  circuit_breakers.py  correlation.py  event_calendar.py  manager.py  portfolio_greeks.py  position_sizer.py  tail_risk.py
src/signals/: cross_asset.py  ensemble.py  gex.py  insider.py  options_flow.py  regime.py  sentiment.py  technical.py  vrp.py
src/strategies/: __init__.py  base.py  broken_wing_butterfly.py  bull_call_spread.py  bull_put_spread.py  calendar_spread.py  diagonal_spread.py  iron_condor.py  long_straddle.py  pmcc.py  ratio_spread.py  selector.py  short_strangle.py
src/utils/: __init__.py  helpers.py  logging.py  metrics.py  scheduling.py
tests/: test_trading_math.py
tests/test_broker/: test_contracts.py  test_market_data.py
tests/test_ml/: test_features.py
tests/test_risk/: test_circuit_breakers.py  test_position_sizer.py
tests/test_signals/: test_ensemble.py  test_regime.py
tests/test_strategies/: test_base.py
tests/test_utils/: test_helpers.py
